<resources>
    <string name="app_name">Albayan Althaky</string>
    <string name="create_avatar_or_upload_picture">Create Avatar or Upload Picture</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone number</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="department">Department</string>
    <string name="create_account">CREATE &amp; PROCEED</string>
    <string name="welcome_text">Welcome to New E-Learning Gate of Dubai Economic Department</string>
    <string name="arabic">Arabic</string>
    <string name="simple_fragment_transition">simple_fragment_transition</string>
    <string name="avatar">avatar</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="country_name">Nigeria</string>
    <string name="catlogHeading">Pick atleast 3 topics</string>
    <string name="done">Done</string>
    <string name="option_one">The procrument commite shall request the offer of one or more suppliers, and if the value of works and services
    is more than AED 100,000, the supplier or contractor shall be asked for final insurance for the release of the contract</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="statistics">Statistics</string>
    <string name="topics">Topics</string>
    <string name="latest_achievemnts">Latest Achievements</string>
    <string name="quila_name">Nasir Mohamid Ali</string>
    <string name="justNow">JUST NOW</string>
    <string name="notification_text">Quick Challenge</string>
    <string name="in_game_music_permission">Do you want to enable In-game music ?</string>
    <string name="notification_skip">Skip this step</string>
    <string name="followed_topics">Followed Topics</string>
    <string name="top_players">Top Players</string>
    <string name="browse_topics">Browse topics</string>
    <string name="nair_mohamed_ali_almazimi">Nasir Mohamed Ali AlMazimi</string>
    <string name="welcome_to_dubai_economic">Welcome to Dubai Economic</string>
    <string name="how_about">How about a quick game before we go any further?\nTry to answer each question as quickly as possible</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="generally_speaking">Generally speaking these are the basics</string>
    <string name="bring_it_on">BRING IT ON !</string>
    <string name="_0">0</string>
    <string name="beginner">Beginner</string>
    <string name="level_1">Level 1</string>
    <string name="you_will_get_them_next_time">You\'ll get them Next time !</string>
    <string name="view_result">View Result</string>
    <string name="login_text">Welcome  to New E-learning Gate of Dubai Economic Department</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="sign_in">Dont have an account? Create account</string>
    <string name="enter_email">Enter your email address below, and we will Send you instructions For resetting it.</string>
    <string name="registered_email">Registered Email</string>
    <string name="registered_number">Registered Number</string>
    <string name="button_send">Send</string>
    <string name="forgetpass">Password Reset</string>
    <string name="would_you_like_to_continue">Would you like to Continue !</string>
    <string name="show_results">Show Results</string>
    <string name="next_level">Next Level</string>
    <string name="_01">01</string>
    <string name="my_score_40">My score : 40</string>
    <string name="hr_department">HR department</string>
    <string name="regulationAndFinancial">Financial Regulations and Regulations of the Financial Regulations</string>
    <string name="dubai_hr_law">Dubai HR Law</string>
    <string name="dubai_corporate_low">Dubai Corporate Law</string>
    <string name="dubai_financial_low">Dubai Financial and Contract Law</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="invalid_selection_with_explanation">INVALID SELECTION WITH EXPLANATION</string>
    <string name="question1">When is the contracter choosen by direct agreement?</string>
    <string name="question">Question</string>
    <string name="get_ready">Get Ready</string>
    <string name="start_game">Start Game</string>
    <string name="level">LEVEL</string>
    <string name="notification">Notification?</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="menu_my_score">My Score</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_topics">Topics</string>
    <string name="menu_notification">Notification</string>
    <string name="image_selection_heading">Image Selection</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="sensor_not_support">Gyroscope sensor not available in your device</string>
    <string name="went_wrong_wait">Something went wrong. Please try again...</string>
    <string name="storage_permission">Turn on Storage Permission from SETTINGS --> PERMISSIONS</string>
    <string name="login_success">Login Success</string>
    <string name="country_codes">COUNTRY CODES</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="select_a_avatar">Select a Avatar</string>
    <string name="select_department">SELECT DEPARTMENT</string>
    <string name="update">Update</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="select_level">SELECT LEVEL</string>
    <string name="verifyText">الرجاء ادخال رقم التحقق الذي استلمتموه على البريد الالكتروني</string>
    <string name="phone_no">Phone No</string>
    <string name="both">Both</string>
    <string name="resetPasswordCaption">Select how you want to reset your password : \n  Choose from the options below to reset the password</string>
    <string name="error_email">Enter a valid email address</string>
    <string name="error_phone">Enter a valid phone number</string>
    <string name="or">or</string>
    <string name="resend_pin">اعادة ارسال الرمز</string>
    <string name="verify_pin">إدخال رمز التحقق</string>
    <string name="passwordHint">Enter Your Password</string>
    <string name="conformPass">Confirm Your Password</string>
    <string name="set">Set</string>
    <string name="password_doesnot_mach">Confirmation password doesn\'t match</string>
    <string name="app_settings">App Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="no_latest_acheivement">No achievements yet</string>
    <string name="change_language">Change Language</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="logout_account_dialog">Are you sure, you want to logout your Account?</string>
    <string name="in_game_music">In-Game Music</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="user_name_edit">User Name Edit</string>
    <string name="user_completed_all_levels">User had completed all levels</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="no_top_players_found">No top players found</string>
    <string name="played_level">Played Level</string>
    <string name="success">Success</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="continue_game">Continue</string>
    <string name="notification_push">Notification</string>
    <string name="quick_challenge">Quick Challenge</string>
    <string name="no_notification">No notification found</string>
    <string name="loading">Loading...</string>
    <string name="challenge_denied">Challenge denied</string>
    <string name="select_topics">Select atleast 3 topics</string>
    <string name="sec">Sec</string>
    <string name="rank">Rank</string>
    <string name="permission">Permission</string>
    <string name="session_expired">You have logged in another device. Please login to continue</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="accept_caps">ACCEPT</string>
    <string name="you">You</string>
    <string name="firstname_cannot_empty">Firstname cannot be empty</string>
    <string name="my_score">My Score</string>
    <string name="warning">Warning</string>
    <string name="submit">Submit</string>
</resources>
