<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="2dp"
    card_view:cardCornerRadius="3dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_name_edit"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/editTextFistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:hint="@string/first_name"
            android:lines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:hint="@string/last_name"
            android:lines="1"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/okTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:text="@string/update"
                android:textColor="@color/main_pink"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cancelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/okTextView"
                android:text="@string/cancel"
                android:textColor="@color/main_pink"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>