<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_background">

    <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/selectedCategoryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/general_knowledge"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_you_lose" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileImageView"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:contentDescription="@string/avatar"
                android:src="@drawable/avatar"
                android:transitionName="@string/simple_fragment_transition"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@+id/profileImageView"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/main_pink" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nair_mohamed_ali_almazimi"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/beginner"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/yellow" />


            <TextView
                android:id="@+id/currentLevelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/level_1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/you_will_get_them_next_time"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="18dp"
                card_view:cardElevation="0dp"
                card_view:cardPreventCornerOverlap="true">

                <Button
                    android:id="@+id/continueButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/continue_game"
                    android:textAllCaps="false"
                    android:textColor="@color/main_pink"
                    android:textSize="13sp" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                card_view:cardCornerRadius="18dp"
                card_view:cardBackgroundColor="@color/lightSemiTransparent"
                card_view:cardElevation="0dp"
                card_view:cardPreventCornerOverlap="true">

                <Button
                    android:id="@+id/retryButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/retry"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                card_view:cardBackgroundColor="@color/grey"
                card_view:cardCornerRadius="18dp"
                card_view:cardElevation="0dp"
                card_view:cardPreventCornerOverlap="true">

                <Button
                    android:id="@+id/viewResultButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/view_result"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>