<RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    app:ignore="NamespaceTypo">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/invalid_dialog_border"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/welcome_to_dubai_economic"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="30dp"
                android:text="@string/how_about"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/general_knowledge"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/generally_speaking"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/confirmButtonCardView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                card_view:cardBackgroundColor="@color/main_pink"
                card_view:cardCornerRadius="18dp"
                card_view:cardElevation="0dp"
                card_view:cardPreventCornerOverlap="true">

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/bring_it_on"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <ImageView
            android:id="@+id/cancelPopupImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="@drawable/white_circle"
            android:src="@drawable/ic_cancel_dialog"
            app:ignore="VectorDrawableCompat" />
    </FrameLayout>


</RelativeLayout>